--- a/index.html
+++ b/index.html
@@ -3,18 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <title>РЫГОТНЯ ХАЧА</title>
+  <link rel="stylesheet" href="file.css">
 </head>
-<link rel="stylesheet" href="file.css">
 <body>
   <h1>ДРИСТНЯ ЮСУФА</h1>
-<div>
-<p>БЛЯЯЯЯЯЯЯЯЯЯЯЯЯЯЯ</p>
-<blockquote color="black" cite="google.com"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" targer="_blank"><i>это пизда гугла</i></a></blockquote>
-<img src="https://tse1.explicit.bing.net/th/id/OIP.GUZs61jlbFX7UZkwR9OjrQHaHa?rs=1&pid=ImgDetMain&o=7&rm=3" alt="MORGEN" height='300' width="1500" title="нахуй убрал курсор">
-<q>Народная мудрость гласит, что если насрешь в ладошку один раз, то <b>блятб, еблоид насрал, сука, убирай быстрее, мудила</b></q> - <i>какой-то еблан</i>
-</div> <br>
-<figure><img src="https://www.meme-arsenal.com/memes/5eec87390cceb7b0a0ba3f6d0784b985.jpg" alt="хачи 5g" height='300' title="нахуй убрал курсор"> <br>
-<figcaption><q><i>Юсуф Ленин</i></q></figcaption>
-</figure>
+  <div>
+    <p>БЛЯЯЯЯЯЯЯЯЯЯЯЯЯЯЯ</p>
+    <blockquote cite="https://www.google.com">
+      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank">
+        <i>это пизда гугла</i>
+      </a>
+    </blockquote>
+    <img src="https://tse1.explicit.bing.net/th/id/OIP.GUZs61jlbFX7UZkwR9OjrQHaHa?rs=1&pid=ImgDetMain&o=7&rm=3" 
+         alt="MORGEN" height="300" width="1500" title="нахуй убрал курсор">
+    <q>Народная мудрость гласит, что если насрешь в ладошку один раз, то 
+      <b>блятб, еблоид насрал, сука, убирай быстрее, мудила</b>
+    </q> - <i>какой-то еблан</i>
+  </div>
+  <br>
+  <figure>
+    <img src="https://www.meme-arsenal.com/memes/5eec87390cceb7b0a0ba3f6d0784b985.jpg" 
+         alt="хачи 5g" height="300" title="нахуй убрал курсор"> 
+    <br>
+    <figcaption><q><i>Юсуф Ленин</i></q></figcaption>
+  </figure>
 </body>
 </html>
