--- a/index.html
+++ b/index.html
@@ -2,11 +2,26 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>РЫГОТНЯ ХАЧА</title>
+  <title>Сайт села Урга (Нижегородская область)</title>
   <link rel="stylesheet" href="file.css">
+  <link rel="icon" href="icon.jpg" type="image/jpg">
+
 </head>
 <body>
-  <h1>ДРИСТНЯ ЮСУФА</h1>
+
+
+  <section class="horizontal">
+    <div class="block"><button><a href="https://genfer1.github.io/New-folder/">Главная</a></button></div>
+    <div class="block"><button disabled><a>Пожертвование</a></button></div>
+    <div class="block"><button disabled><a>О нас</a></button></div>
+  </section>
+  
+
+  <a  href="https://github.com" target="_blank">
+    <button><h1>ДРИСТНЯ ЮСУФА</h1></button>
+  </a>
+
+
   <div>
     <p>БЛЯЯЯЯЯЯЯЯЯЯЯЯЯЯЯ</p>
     <blockquote cite="https://www.google.com">
@@ -16,9 +31,10 @@
     </blockquote>
     <img src="https://tse1.explicit.bing.net/th/id/OIP.GUZs61jlbFX7UZkwR9OjrQHaHa?rs=1&pid=ImgDetMain&o=7&rm=3" 
          alt="MORGEN" height="300" width="1500" title="нахуй убрал курсор">
-    <q>Народная мудрость гласит, что если насрешь в ладошку один раз, то 
+        <blockquote>
+          <q>Народная мудрость гласит, что если насрешь в ладошку один раз, то 
       <b>блятб, еблоид насрал, сука, убирай быстрее, мудила</b>
-    </q> - <i>какой-то еблан</i>
+    </q> </blockquote>- <i>какой-то еблан</i>
   </div>
   <br>
   <figure>
@@ -27,5 +43,18 @@
     <br>
     <figcaption><q><i>Юсуф Ленин</i></q></figcaption>
   </figure>
+
+  <h2>Маркированный список покупок</h2>
+<ul>
+  <li>Хлеб</li>
+  <li>Молоко</li>
+  <li>Яблоки</li>
+</ul>
+
+<article>
+  <h2>Новости</h2>
+  <p>Сегодня вышла новая версия HTML.</p>
+</article>
+
 </body>
 </html>
