короче теперь это шашки

--- a/index.html
+++ b/index.html
@@ -2,59 +2,90 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Сайт села Урга (Нижегородская область)</title>
+  <title>Шашки играть</title>
   <link rel="stylesheet" href="file.css">
   <link rel="icon" href="icon.jpg" type="image/jpg">
-
 </head>
 <body>
 
 
   <section class="horizontal">
-    <div class="block"><button><a href="https://genfer1.github.io/New-folder/">Главная</a></button></div>
-    <div class="block"><button disabled><a>Пожертвование</a></button></div>
-    <div class="block"><button disabled><a>О нас</a></button></div>
+    <div class="block"><button disabled><a>Главная</a></button></div>
+    <div class="block"><button><a href="rules.html">Правила</a></button></div>
+    <div class="block"><button><a href="about.html">О нас(мне)</a></button></div>
   </section>
   
+  <table class="my-table">
+    <!-- верхние буквы -->
+    <tr class="top-labels">
+      <th></th>
+      <th>A</th><th>B</th><th>C</th><th>D</th><th>E</th><th>F</th><th>G</th><th>H</th>
+      <th></th>
+    </tr>
+  
+    <!-- ряд 8 -->
+    <tr>
+      <th class="row-label">8</th>
+      <td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td bgcolor="#FFFFFF">
+      <th class="row-label">8</th>
+    </tr>
+    <!-- ряд 7 -->
+    <tr>
+      <th class="row-label">7</th>
+      <td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td>
+      <th class="row-label">7</th>
+    </tr>
+    <!-- ряд 6 -->
+    <tr>
+      <th class="row-label">6</th>
+      <td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td bgcolor="#FFFFFF">
+      <th class="row-label">6</th>
+    </tr>
+    <!-- ряд 5 -->
+    <tr>
+      <th class="row-label">5</th>
+      <td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td>
+      <th class="row-label">5</th>
+    </tr>
+    <!-- ряд 4 -->
+    <tr>
+      <th class="row-label">4</th>
+      <td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td bgcolor="#FFFFFF">
+      <th class="row-label">4</th>
+    </tr>
+    <!-- ряд 3 -->
+    <tr>
+      <th class="row-label">3</th>
+      <td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td>
+      <th class="row-label">3</th>
+    </tr>
+    <!-- ряд 2 -->
+    <tr>
+      <th class="row-label">2</th>
+      <td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td bgcolor="#FFFFFF">
+      <th class="row-label">2</th>
+    </tr>
+    <!-- ряд 1 -->
+    <tr>
+      <th class="row-label">1</th>
+      <td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td><td bgcolor="#000000"></td><td bgcolor="#FFFFFF"></td>
+      <th class="row-label">1</th>
+    </tr>
+  
+    <!-- нижние буквы -->
+    <tr class="bottom-labels">
+      <th></th>
+      <th>A</th><th>B</th><th>C</th><th>D</th><th>E</th><th>F</th><th>G</th><th>H</th>
+      <th></th>
+    </tr>
 
-  <a  href="https://github.com" target="_blank">
-    <button><h1>ДРИСТНЯ ЮСУФА</h1></button>
-  </a>
+    
+  <!-- Левая клетка -->
+<div class="captured-left">Ваши "съеденные" фигуры</div>
 
+<!-- Правая клетка -->
+<div class="captured-right">"Съеденные" фигуры противника</div>
 
-  <div>
-    <p>БЛЯЯЯЯЯЯЯЯЯЯЯЯЯЯЯ</p>
-    <blockquote cite="https://www.google.com">
-      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank">
-        <i>это пизда гугла</i>
-      </a>
-    </blockquote>
-    <img src="https://tse1.explicit.bing.net/th/id/OIP.GUZs61jlbFX7UZkwR9OjrQHaHa?rs=1&pid=ImgDetMain&o=7&rm=3" 
-         alt="MORGEN" height="300" width="1500" title="нахуй убрал курсор">
-        <blockquote>
-          <q>Народная мудрость гласит, что если насрешь в ладошку один раз, то 
-      <b>блятб, еблоид насрал, сука, убирай быстрее, мудила</b>
-    </q> </blockquote>- <i>какой-то еблан</i>
-  </div>
-  <br>
-  <figure>
-    <img src="https://www.meme-arsenal.com/memes/5eec87390cceb7b0a0ba3f6d0784b985.jpg" 
-         alt="хачи 5g" height="300" title="нахуй убрал курсор"> 
-    <br>
-    <figcaption><q><i>Юсуф Ленин</i></q></figcaption>
-  </figure>
-
-  <h2>Маркированный список покупок</h2>
-<ul>
-  <li>Хлеб</li>
-  <li>Молоко</li>
-  <li>Яблоки</li>
-</ul>
-
-<article>
-  <h2>Новости</h2>
-  <p>Сегодня вышла новая версия HTML.</p>
-</article>
 
 </body>
 </html>
