--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <div class="block"><button><a href="rules.html">Правила</a></button></div>
         <div class="block"><button disabled><a>О нас(мне)</a></button></div>
     </section>
-<div class="blabla"><section><img src="literallyme.jpg" title="это я" height="300"><br>
+<div class="blabla"><section><img src="literallyme.jpg" title="шучу, Фатима" height="300"><br>
 Да да, это я</section></div>
 </body>
 </html>
